added base files and folder structure. added empty classes to fill in. added basic CLI class. need to address colors and validate(). removed dist folder from .gitignore as instructed. installed inquirer package. updated README with credits

--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
   "bugs": {
     "url": "https://github.com/miacias/svg-logo-generator/issues"
   },
-  "homepage": "https://github.com/miacias/svg-logo-generator#readme"
+  "homepage": "https://github.com/miacias/svg-logo-generator#readme",
+  "dependencies": {
+    "inquirer": "^8.2.4"
+  }
 }
